--- a/src/css/pages/_contact.scss
+++ b/src/css/pages/_contact.scss
@@ -82,7 +82,6 @@
         position: relative;
         transition: 0.4s;
         height: 100%;
-        margin: 2rem 0;
         transition: all 0.5s cubic-bezier(0.92, 0.08, 0.28, 1.46);
 
         @keyframes info-name-left {
@@ -144,9 +143,7 @@
               display: inline-block;
               animation: info-name-right 1s ease-in-out;
             }
-
           }
-
 
           .address {
 
@@ -156,7 +153,6 @@
               color: a.$colorWhite;
               letter-spacing: 1px;
               font-weight: 500;
-
             }
 
             svg,
@@ -165,7 +161,6 @@
               transform: rotate(360deg) scale(1.2);
               fill: a.$colorGreenLight;
             }
-
           }
 
           .phone {
@@ -184,7 +179,6 @@
               transform: rotate(360deg) scale(1.2);
               fill: a.$colorGreenLight;
             }
-
           }
 
           .mail {
@@ -203,7 +197,6 @@
               transform: rotate(360deg) scale(1.2);
               fill: a.$colorGreenLight;
             }
-
           }
 
           .rcp {
@@ -222,7 +215,6 @@
               transform: rotate(360deg) scale(1.2);
               fill: a.$colorGreenLight;
             }
-
           }
 
           .siret {
@@ -261,7 +253,6 @@
           font-size: 1.6rem;
           margin-top: -3rem;
           margin-bottom: 4rem;
-
         }
 
         // alignement des infos
@@ -293,16 +284,11 @@
 
           p,
           a {
-
             transition: all 0.5s cubic-bezier(0.92, 0.08, 0.28, 1.46);
             text-decoration: none;
             color: a.$colorDark;
           }
-
-
         }
-
-
 
         // ------------------------------- formulaire de contact
         form {
@@ -355,8 +341,6 @@
               }
             }
           }
-
-
         }
 
         .hidden-captcha {
@@ -445,10 +429,7 @@
             margin: 0;
           }
         }
-
       }
-
-
     }
   }
 }
@@ -502,7 +483,6 @@
   .mentions-date {
     font-weight: bold;
     margin-bottom: 3rem;
-
   }
 
   .mentions-first {
@@ -557,8 +537,6 @@
 
         form {
           margin-bottom: 8rem;
-
-
         }
 
         footer {
@@ -618,8 +596,8 @@
     }
 
     &__content__block {
+
       .contact__wrapper {
-        height: auto;
 
         // alignement des infos
         .info {
@@ -643,7 +621,6 @@
           font-size: 1.6rem;
           align-items: center;
 
-
           #linkedlnFooter {
             bottom: 7rem;
             left: 5rem;
@@ -657,7 +634,6 @@
           .footer-grid-2 {
             margin-top: -7rem;
           }
-
         }
       }
     }
@@ -667,9 +643,9 @@
 // ========= MEDIA QUERY > 1240PX ( GRAND ECRAN =============
 @media screen and (min-width: 1240px) {
 
-.contact {
+  .contact {
     &__content {
-      height: 50rem;
+      height: 55rem;
 
       &__border-left {
         max-height: 90%;
@@ -750,8 +726,6 @@
             margin-top: 13.1rem;
           }
 
-
-
           &--phone {
             margin-top: -14rem;
           }
@@ -794,34 +768,33 @@
       }
     }
   }
+}
 
- }
-
- // ====== MEDIA QUERY >  MOBILE ORIENTATION PAYSAGE =======
- @media (orientation: landscape) and (max-height: 430px) {
+// ====== MEDIA QUERY >  MOBILE ORIENTATION PAYSAGE =======
+@media (orientation: landscape) and (max-height: 430px) {
   .contact {
-      padding-top: 3rem;
-  
-      &__content__block {
-        .contact__wrapper {
-          .title-form {
-            margin: 0;
-            margin-top: -1rem;
-          }
-  
-          .sentence-form {
-            margin: 0;
-          }
+    padding-top: 3rem;
+
+    &__content__block {
+      .contact__wrapper {
+        .title-form {
+          margin: 0;
+          margin-top: -1rem;
+        }
+
+        .sentence-form {
+          margin: 0;
         }
       }
     }
   }
+}
 
-    // ======= MEDIA QUERY > 768PX < 960 & height < 740 ( PETIT ECRAN PAYSAGE ) =================
-    @media screen and (min-width: 768px) and (max-width: 960px) and (max-height: 740px) {
+// ======= MEDIA QUERY > 768PX < 960 & height < 740 ( PETIT ECRAN PAYSAGE ) =================
+@media screen and (min-width: 768px) and (max-width: 960px) and (max-height: 740px) {
 
-      .contact {
-          margin-top: 20vh;
-          height: 70vh;
-        }
-     }
+  .contact {
+    margin-top: 20vh;
+    height: 70vh;
+  }
+}
