--- a/src/css/pages/_prestations.scss
+++ b/src/css/pages/_prestations.scss
@@ -1,4 +1,5 @@
 @use "../abstracts/_all" as a;
+
 //
 .filter-services {
   width: 100vw;
@@ -58,7 +59,7 @@
       padding: 0.5rem;
       display: grid;
       grid-template-columns: 1fr;
-      gap: calc(30rem + -40vh) 20px !important;
+      gap: 1.4rem;
       justify-items: center;
       align-items: flex-start;
       overflow: scroll;
@@ -100,7 +101,7 @@
           margin-bottom: 0.7rem;
         }
 
-       /*  ul li {
+        /*  ul li {
           font-size: 1.6rem;
           color: a.$colorWhite;
           font-family: a.$fontCovesFamily;
@@ -112,7 +113,7 @@
 
         ul li {
           margin-bottom: 1rem;
-        } 
+        }
 
         &__content {
           margin-top: 1rem;
@@ -144,22 +145,6 @@
   }
 }
 
-// =========== MEDIA QUERY  <500PX (MOBILE) ==============
-@media screen and (min-width: 100px)
-  {
-  .services__content__block {
-    gap: calc(40rem + -40vh) 20px;
-  }
-}
-
-// ====== MEDIA QUERY >500px (MINI TABLETTE) =========
-@media screen and (min-width: 500px) {
-  .services__content__block {
-    gap: calc(40rem + -35vh) 20px !important;
-  }
-}
-
-
 // ========== MEDIA QUERY > 767PX (TABLETTE) ============
 @media screen and (min-width: 767px) {
   .services {
@@ -171,7 +156,6 @@
 
     &__content__block {
       grid-template-columns: 1fr 1fr;
-      gap: calc(0rem + -20vh) 20px !important;
 
       //----------  boite prestations -------------
       .services__wrapper {
@@ -224,10 +208,6 @@
     &__title__border-right {
       margin-top: 1.5%;
     }
-
-    &__content__block {
-      gap: calc(40rem + -45vh) 20px;
-    }
   }
 }
 
@@ -260,7 +240,7 @@
           /* .title {
                           margin-bottom: 2rem;
                       } */
-/* 
+          /* 
           ul li {
             margin-bottom: 0.6rem;
           } */
@@ -283,11 +263,12 @@
 @media screen and (min-width: 768px) and (max-width: 960px) and (max-height: 740px) {
 
   .filter-services {
-z-index: 50;
+    z-index: 50;
   }
+
   .services {
     margin-top: 23vh;
     height: 70vh;
-      gap: 10px;
+    gap: 10px;
   }
 }
